dial9-macro/src/snapshots/dial9_macro__tests__expand_with_attributes.snap
---
source: dial9-macro/src/lib.rs
expression: output
---
#[allow(unused)]
fn main() {
    let __dial9_rt = ::dial9_tokio_telemetry::TracedRuntime::new(my_config());
    __dial9_rt
        .block_on(async move {
            let _ = 42;
        })
}
